[project]
name = "git_helpers"
version = "0.1.0"
description = "git_helpers: a CLI tool for common git workflows"
readme = "README.md"
authors = [{ name = "Neco Kriel", email = "necokriel@gmail.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project.scripts]
git_helpers = "git_helpers.user_interface:main"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["utests", "vtests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pyright]
include = ["src", "utests", "vtests"]
extraPaths = ["src", "."]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedParameter = "none"
